# mnema

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CORPUS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md  build.rs
.agents/: claude-opus48-d53f4ce2ade0-prompt.md
.claude/: settings.json
docs/: ARCHITECTURE.md  CORPUS.md  DIAGNOSTICS.md  MIGRATION-v1-to-v2.md  MIGRATION-v2-to-v3.md  README.en.md  README.md  TEST-CATALOG.md  TESTING.md  agent-roster.md
scripts/: async-release-gate.ps1  benchmark.ps1  ci.ps1  test-suites.ps1
src/: activation.rs  canonical.rs  cli.rs  cutover_v3.rs  diagnostics.rs  event.rs  graph.rs  journal.rs  journal_v3.rs  journal_view.rs  main.rs  markers.rs  output.rs  projection.rs  reference.rs  render.rs  scope.rs  snapshot.rs  strict_json.rs  tests.rs  tree.rs  util.rs
src/commands/: context.rs  doctor.rs  explain.rs  manage.rs  mod.rs  query.rs  write.rs
src/diagnostics/: audit.rs  runtime.rs
src/tests/: cli_tests.rs  context_tests.rs  diagnostics_tests.rs  journal_tests.rs  manage_tests.rs  output_tests.rs  query_tests.rs  support.rs  util_tests.rs  write_tests.rs
src/tests/support/: cli.rs  journal.rs  markers.rs  output.rs
tests/: behavior_harness.rs  cli_recovery.rs  crash_atomicity.rs  v2_v3_compat.rs  v3_runtime.rs
tests/behavior/: README.md  scenarios.json
tests/behavior/snapshots/: invalid-id.stderr.txt  root-help.stdout.txt
tests/compatibility/: README.md
tests/fixtures/: SCHEMA.md  catalog.json
tests/fixtures/v2/compat-v1/: README.md  expected.json
tests/fixtures/v2/compat-v1/.mnema/: journal-id.json  journal.jsonl
tests/recursive/: README.md  SOURCE  crash.list  crash.list.bi  driver.py  full.list  full.list.bi  rere.py  smoke.list  smoke.list.bi  tests.list  tests.list.bi
