[package]
name = "mnema"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
description = "Append-only semantic topology for durable human and multi-agent work"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GodOnlyKn0w/mnema"
homepage = "https://github.com/GodOnlyKn0w/mnema"
readme = "README.md"
keywords = ["agents", "journal", "cli", "coordination", "memory"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".mnema/**",
    ".artifacts/**",
    ".claude/**",
    "scratch/**",
    "AGENTS.md",
    "CLAUDE.md",
]

[features]
test-failpoints = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
atty = "0.2"
fs2 = "0.4"
getrandom = "0.4"
inquire = "0.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
